--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,30 +1,49 @@
-
-
-#header {height: 50px;
-		padding: 5px;
-		background-color: gray;
+@font-face {
+	font-family: 'visitor2';
+	src: url(' ../fonts/visitor2.eot');
+	src: local('☺'), url('../fonts/visitor2.woff') format('woff'), url('../fonts/visitor2.ttf') format('truetype'), url('../fonts/visitor2.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
 }
-		
-#navigation{position:absolute;
-			top: 70px;
-			width: 150px;
-			}
-			
-			
-			
 
-		
 
-		
-		
 
-body {font-family: calibri;
-	 font-size: 12pt; 
-	 color: rgb(64,64,64);
-	 margin: 25px  75px 25px 75px;
-	 padding: 0px;
-	}
+/* used for nav bar */
+.navbar{
+	margin: 0;
+	padding: 0; 
+	text-align: center;	
+	float: none;
+	font-family: visitor2;
+	font-size: 28pt;
+}
+
+.navbar li{
+    display: inline-block;  /*removes breaks */
+	list-style: none;
+	padding: 8px;
+}
+
+.navbar a{
+	color: #3366ff;
+	/* background-color: #666666; */
+	text-decoration: none; 
+}		
+		
+.navbar a:hover{
+	background-color: #8c8c8c;
+}
+
+/* navbar end */			
+
+
+#content{
+	font: calibri 12pt;
+	color: rgb(64,64,64);
+	margin: 25px  75px 25px 75px;
+	padding: 50px;
+}
 	 
 
 
-h2 {color: rgb(61,133,198;}
+h2 {color: rgb(61,133,198}
