--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -7,8 +7,7 @@
 }
 
 
-
-/* used for nav bar */
+/** used for nav bar **/
 .navbar{
 	margin: 0;
 	padding: 0; 
@@ -21,7 +20,7 @@
 .navbar li{
     display: inline-block;  /*removes breaks */
 	list-style: none;
-	padding: 8px;
+	padding: 8px 8px 0 8px;
 }
 
 .navbar a{
@@ -37,13 +36,16 @@
 /* navbar end */			
 
 
+/** for general body content **/
 #content{
-	font: calibri 12pt;
-	color: rgb(64,64,64);
-	margin: 25px  75px 25px 75px;
-	padding: 50px;
-}
-	 
+	float: left;
+	font-family: calibri;
+	font-size: 16pt;
+	color: #404040;
+	margin: 25px 50px 25px 50px;   /* t r d l */
+	padding: 0 100px;
+}	 
 
+h2 {color: #3366ff}
 
-h2 {color: rgb(61,133,198}
+/*end of gen body */
